# price-my-cloud

./: README.md
distributed-system-mock/: docker-compose.yml
distributed-system-mock/distributed_system_mock/: Dockerfile  pyproject.toml
distributed-system-mock/distributed_system_mock/src/aws/: models.py  utils.py
distributed-system-mock/distributed_system_mock/src/dsm/: settings.py  urls.py  wsgi.py
distributed-system-mock/distributed_system_mock/src/node/: admin.py  forms.py  graph.py  models.py  urls.py  views.py
distributed-system-mock/distributed_system_mock/src/node/migrations/: 0001_initial.py  0003_alter_component_options_alter_componenttype_options_and_more.py  0008_alter_connection_unique_together.py  0013_component_instance_type.py
distributed-system-mock/distributed_system_mock/src/node/templates/: _footer.html  _header.html  base.html  home.html  new_node.html  node_details.html  node_graph.html
distributed-system-mock/distributed_system_mock/src/node/templates/forms/: component_update_form.html
load-balancer-mock/: load_balancer_mock.py
micro-system-mock/: pyproject.toml
micro-system-mock/micro_system_mock/: config.py  db.py  main.py  utils.py
microservice-mock/: create_database.sh  pyproject.toml
microservice-mock/microservice_mock/: config.py  main.py  utils.py
price-my-cloud/: docker-compose.yml
price-my-cloud/price_my_cloud/: Dockerfile  pyproject.toml
price-my-cloud/price_my_cloud/src/: manage.py
price-my-cloud/price_my_cloud/src/aws/: admin.py  enum_support.py  enums.py  models.py  utils.py
price-my-cloud/price_my_cloud/src/aws/migrations/: 0001_initial.py  0002_alter_flowlogdata_destination_port_and_more.py  0003_rename_packet_flowlogdata_packets.py  0004_alter_flowlogdata_bytes_alter_flowlogdata_packets.py
price-my-cloud/price_my_cloud/src/dsm/: asgi.py  settings.py  urls.py
price-my-cloud/price_my_cloud/src/node/: admin.py  forms.py  graph.py  models.py  utils.py  views.py
terraform/architecture_1/A/: servers.tf
terraform/architecture_1/B/: bastion.tf  flow-logs.tf  servers.tf  vpc.tf
terraform/architecture_1/C/: servers.tf
(+23 files in other folders)
