[tool.poetry]
name = "micro-system-mock"
version = "0.1.0"
description = ""
authors = ["Daniel Szarek <daniel.szarek98@gmail.com>"]
readme = "README.md"
packages = [{include = "micro_system_mock"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.94.1"
uvicorn = {extras = ["standard"], version = "^0.21.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
