[tool.poetry]
name = "distributed-system-mock"
version = "0.1.0"
description = ""
authors = ["Daniel Szarek <daniel.szarek98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
graphviz = "^0.20.1"
django-extensions = "^3.2.1"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
